--- a/Inventory_0.2/src/Application/Application.csproj
+++ b/Inventory_0.2/src/Application/Application.csproj
@@ -20,4 +20,9 @@
         <ProjectReference Include="..\Domain\Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="ExportInvoice\Commands\" />
+      <Folder Include="ExportInvoice\Querries\" />
+    </ItemGroup>
+
 </Project>
