--- a/Inventory_0.2/src/Web/ClientApp/package.json
+++ b/Inventory_0.2/src/Web/ClientApp/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "antd": "^5.7.2",
-    
+    "availity-reactstrap-validation": "^2.7.1",
     "bootstrap": "^5.2.3",
     "http-proxy-middleware": "^2.0.6",
     "jquery": "^3.6.4",
@@ -15,7 +15,7 @@
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.11.0",
     "react-scripts": "^5.0.1",
-    "reactstrap": "^9.1.9",
+    "reactstrap": "^9.2.0",
     "rimraf": "^5.0.0",
     "web-vitals": "^3.3.1",
     "workbox-background-sync": "^6.5.4",
