--- a/Inventory_0.2/src/Web/Web.csproj
+++ b/Inventory_0.2/src/Web/Web.csproj
@@ -55,6 +55,10 @@
         <None Remove="$(SpaRoot)**" />
         <None Include="$(SpaRoot)**" Exclude="$(SpaRoot)node_modules\**" />
     </ItemGroup>
+
+    <ItemGroup>
+      <Compile Remove="ClientApp\src\components\pages\AllProductTable.cs" />
+    </ItemGroup>
     
     <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
         <!-- Ensure Node.js is installed -->
