--- a/Inventory_0.2/src/Application/Application.csproj
+++ b/Inventory_0.2/src/Application/Application.csproj
@@ -23,6 +23,7 @@
     <ItemGroup>
       <Folder Include="ExportInvoice\Commands\" />
       <Folder Include="ExportInvoice\Querries\" />
+      <Folder Include="Warehouses\Commands\" />
     </ItemGroup>
 
 </Project>
