--- a/Inventory_0.2/src/Application/Application.csproj
+++ b/Inventory_0.2/src/Application/Application.csproj
@@ -9,6 +9,12 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <Compile Remove="ExportInvoice\**" />
+      <EmbeddedResource Remove="ExportInvoice\**" />
+      <None Remove="ExportInvoice\**" />
+    </ItemGroup>
+
+    <ItemGroup>
         <PackageReference Include="Ardalis.GuardClauses" />
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" />
         <PackageReference Include="FluentValidation.DependencyInjectionExtensions" />
@@ -21,8 +27,6 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="ExportInvoice\Commands\" />
-      <Folder Include="ExportInvoice\Querries\" />
       <Folder Include="Warehouses\Commands\" />
     </ItemGroup>
 
